# lib-rs-mirror

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  build.rs  build.sh  foreachdep.sh  reindex.sh  rustfmt.toml
.cargo/: config.toml
builder/: Cargo.toml  Cargo.toml.disabled
builder/docker/: Dockerfile  prewarm_Cargo.toml  run.sh
builder/src/: db.rs  main.rs  parse.rs
categories/: Cargo.toml
categories/src/: categories.rs  categories.toml  synonyms.rs  tuning.rs
crate_db/: Cargo.toml  README.md
crate_db/src/: builddb.rs  lib_crate_db.rs  schema.rs  stopwords.rs
crate_files/: Cargo.toml
crate_files/src/: lib.rs  tarball.rs
crate_git_checkout/: Cargo.toml
crate_git_checkout/src/: crate_git_checkout.rs  iter.rs
crates_io_client/: Cargo.toml  README.md
crates_io_client/src/: crate_meta.rs  crate_owners.rs  lib_crates_io_client.rs
creviews/: Cargo.toml
creviews/src/: lib.rs  security.rs
data/: README.md  ablocklist.csv  author_shitlist.txt  category_overrides.txt  git_crates.json  git_crates.txt  tag-synonyms.csv
data/page/: about.md  next-page.md  revdeps.md
datadump/: .gitignore  Cargo.toml
datadump/src/: main.rs
debcargo_list/: Cargo.toml
debcargo_list/src/: lib.rs
deps_index/: Cargo.toml
deps_index/src/: deps_stats.rs  git_crates_index.rs  index.rs  lib.rs
docs_rs_client/: Cargo.toml  README.md
docs_rs_client/src/: lib_docs_rs_client.rs
event_log/: Cargo.toml
event_log/src/: lib.rs  main.rs
feat_extractor/: Cargo.toml
feat_extractor/src/: lib.rs  wlita.rs
fetcher/: Cargo.toml
fetcher/src/: lib_fetcher.rs
front_end/: .gitignore  Cargo.toml  README.md  build.rs  build.sh
front_end/public/: opensearch.xml  robots.txt
front_end/src/: all_versions.rs  author_page.rs  cat_page.rs  crate_page.rs  crev.rs  download_graph.rs  front_end.rs  global_stats.rs  home_page.rs  install_page.rs  iter.rs  maintainer_dashboard.rs  not_found_page.rs  reverse_dependencies.rs  search_page.rs  urler.rs
front_end/templates/: all_versions.rs.html  atom.rs.html  author.rs.html  author_list.rs.html  base.rs.html  cat_page.rs.html  crate_page.rs.html  crev.rs.html  debug.rs.html  deps_list.rs.html  downloads.rs.html  error_page.rs.html  global_stats.rs.html  global_stats_rustc.rs.html  histogram.rs.html  home_categories.rs.html  homepage.rs.html  install.rs.html  labels.rs.html  maintainer_dashboard.rs.html  maintainer_dashboard_atom.rs.html  not_found.rs.html  rev_dep_row.rs.html  reverse_dependencies.rs.html  serp.rs.html  simple_list.rs.html  static_page.rs.html  target_cfg.rs.html  trending.rs.html
github_info/: Cargo.toml  README.md
github_info/src/: lib_github.rs  model.rs
github_v3/: Cargo.toml  README.md
github_v3/examples/: users.rs
github_v3/src/: lib.rs  model.rs
kitchen_sink/: Cargo.toml  README.md  test.crate
kitchen_sink/src/: ablocklist.rs  ctrlcbreak.rs  deps_stats.rs  filter.rs  git_crates_index.rs  index.rs  lib_kitchen_sink.rs  nonblock.rs  tarball.rs  yearly.rs
kitchen_sink/test.repo/http%3A%2F%2Fexample.invalid%2Ffoo.git/info/: refs
kitchen_sink/test.repo/http%3A%2F%2Fexample.invalid%2Ffoo.git/objects/info/: packs
kitchen_sink/test.repo/http%3A%2F%2Fexample.invalid%2Ffoo.git/objects/pack/: pack-7b4d762e5433b85897372d64e8c489002696940c.bitmap  pack-7b4d762e5433b85897372d64e8c489002696940c.idx  pack-7b4d762e5433b85897372d64e8c489002696940c.pack
public/: robots.txt
ranking/: Cargo.toml  rankdata.txt
ranking/src/: authorrank.rs  lib_ranking.rs  main.rs  scorer.rs
reindex/: Cargo.toml  README.md  reindex.sh
repo_url/: Cargo.toml  README.md
repo_url/src/: repo.rs
rich_crate/: Cargo.toml  README.md
rich_crate/src/: lib.rs  rich_crate.rs  rich_crate_version.rs
search_index/: Cargo.toml
search_index/src/: lib_search_index.rs
server/: Cargo.toml  README.md
server/crates-servera.xcodeproj/: project.pbxproj
server/src/: main.rs  writer.rs
simple_cache/: Cargo.toml  README.md
simple_cache/src/: db.rs  error.rs  kv.rs  lib.rs
src/: _category.scss  authorrank.rs  cat_page.rs  categories.rs  categories.toml  colors.scss  comprstring.rs  crate_deps.rs  crate_downloads.rs  crate_git_checkout.rs  crate_meta.rs  crate_owners.rs  crate_page.rs  critical.scss  ctrlcbreak.rs  db.rs  deps_stats.rs  download_graph.rs  error.rs  filter.rs  front_end.rs  git.rs  home.scss  home_page.rs  index.rs  index.scss  iter.rs  kv.rs  lib.rs  lib_crate_db.rs  lib_crates_io_client.rs  lib_docs_rs_client.rs  lib_github.rs  lib_kitchen_sink.rs  lib_ranking.rs  lib_search_index.rs  lib_user_db.rs  main.rs  model.rs  repo.rs  (+9 more)
tarball/: Cargo.toml
tarball/src/: lib.rs
tarball/test.repo/http%3A%2F%2Fexample.invalid%2Ffoo.git/: config  packed-refs
templates/: base.rs.html  cat_page.rs.html  crate_page.rs.html  deps_list.rs.html  downloads.rs.html  footer.rs.html  home_categories.rs.html  homepage.rs.html  krate.rs.html  labels.rs.html  serp.rs.html
udedokei/: Cargo.toml
udedokei/src/: lib.rs
user_db/: Cargo.toml  README.md
user_db/src/: lib_user_db.rs  schema.rs
validator/: Cargo.toml
validator/src/: lib.rs
