
[workspace]
members = [
"cargo_author",
"cargo_toml",
"categories",
"crate_db",
"crates_io_client",
"creviews",
"datadump",
"docs_rs_client",
"fetcher",
"front_end",
"github_info",
"kitchen_sink",
"reindex",
"render_readme",
"repo_url",
"rich_crate",
"simple_cache",
"user_db",
"crate_git_checkout",
"udedokei",
"search_index",
"ranking",
"server",
"feat_extractor",
"deps_index",
"debcargo_list",
]

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
debug = 1
lto = true

[profile.dev.package.miniz_oxide]
opt-level = 3
debug = false

[profile.dev.package.flate2]
opt-level = 3
debug = false

[profile.dev.package.serde]
opt-level = 3
debug = false

[profile.dev.package.rmp-serde]
opt-level = 3
debug = false


[patch.crates-io]
cargo_toml = { path = "cargo_toml" }
cargo_author = { path = "cargo_author" }
