
[workspace]
members = [
"builder",
"cargo_author",
"cargo_toml",
"categories",
"crate_db",
"crates_io_client",
"creviews",
"datadump",
"docs_rs_client",
"event_log",
"fetcher",
"front_end",
"github_info",
"kitchen_sink",
"reindex",
"render_readme",
"repo_url",
"rich_crate",
"simple_cache",
"user_db",
"crate_git_checkout",
"udedokei",
"search_index",
"ranking",
"server",
"tarball",
"feat_extractor",
"deps_index",
"debcargo_list",
]

[profile.dev]
opt-level = 1
debug = false

[profile.release]
opt-level = 2
debug = 1

[profile.release.package."*"]
opt-level = 2
debug = false

[patch.crates-io]
cargo_toml = { path = "cargo_toml" }
cargo_author = { path = "cargo_author" }
