[package]
name = "builder"
version = "0.2.1"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2018"
default-run = "builder"

[dependencies]
kitchen_sink = { path = "../kitchen_sink", version = "0.9" }
rusqlite = "0.24"
parking_lot = "0.11"
chrono = "0.4.11"
regex = "1.3.7"
serde = "1.0.107"
serde_json = "1.0.52"
serde_derive = "1.0.107"
scopeguard = "1.1.0"
rand = "0.7.3"
crate_db = { path = "../crate_db", version = "0.4.5" }
lts = "0.1.5"
crates-index = "0.15.2"
tokio = { version = "0.2.22", features = ["rt-threaded", "macros"] }
