[package]
name = "builder"
version = "0.4.3"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2018"
default-run = "builder"

[dependencies]
kitchen_sink = { path = "../kitchen_sink", version = "0.9" }
rusqlite = "0.25.0"
parking_lot = "0.11.1"
chrono = "0.4.19"
regex = { version = "1.4.6", default-features = false }
serde = "1.0.125"
serde_json = "1.0.64"
serde_derive = "1.0.125"
scopeguard = "1.1.0"
rand = "0.8.3"
crate_db = { path = "../crate_db", version = "0.4.5" }
lts = "0.1.5"
crates-index = "0.16.6"
tokio = { version = "1.4.0", features = ["rt-multi-thread", "macros"] }
crossbeam-channel = "0.5.1"
fs2 = "0.4.3"
log = "0.4.14"
futures = "0.3.14"
