[package]
name = "builder"
version = "0.4.7"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2021"
default-run = "builder"

[dependencies]
kitchen_sink = { path = "../kitchen_sink", version = "0.9" }
rusqlite = "0.28.0"
parking_lot = "0.12.1"
chrono = { version = "0.4.22", default-features = false }
regex = { version = "1.6.0", default-features = false }
serde = "1.0.145"
serde_json = "1.0.85"
serde_derive = "1.0.145"
scopeguard = "1.1.0"
rand = "0.8.5"
crate_db = { path = "../crate_db", version = "0.4.5" }
crates-index = "0.18.9"
tokio = { version = "1.21.1", features = ["rt-multi-thread", "macros"] }
crossbeam-channel = "0.5.6"
fs2 = "0.4.3"
log = "0.4.14"
futures = "0.3.14"
ahash = "0.8.0"
