[package]
edition = "2018"
name = "categories"
version = "0.1.5"
authors = ["Kornel <kornel@geekhood.net>"]
license = "MIT OR Apache-2.0"
description = "List of categories from crates.io"

[lib]
name = "categories"
path = "src/categories.rs"

[dependencies]
serde = "1.0.104"
toml = "0.5.5"
serde_derive = "1.0.104"
lazy_static = "1.4.0"
quick-error = "1.2.2"
