[package]
edition = "2021"
name = "categories"
version = "0.1.9"
authors = ["Kornel <kornel@geekhood.net>"]
license = "MIT OR Apache-2.0"
description = "List of categories from crates.io"

[lib]
name = "categories"
path = "src/categories.rs"

[dependencies]
serde = "1.0.145"
toml = "0.5.9"
serde_derive = "1.0.145"
lazy_static = "1.4.0"
quick-error = "2.0.1"
heck = "0.4.0"
