[package]
edition = "2018"
name = "crate_db"
version = "0.4.15"
authors = ["Kornel <kornel@geekhood.net>"]
description = "Internal index of crates used by crates.rs"

[lib]
name ="crate_db"
path = "src/lib_crate_db.rs"

[dependencies]
rusqlite = "0.26.0"
rich_crate = { path = "../rich_crate" }
categories = { path = "../categories" }
lazy_static = "1.4.0"
chrono = "0.4.11"
thread_local = "1.0.1"
parking_lot = "0.11"
rmp-serde = "1.0.0"
heck = "0.4.0"
semver = "1.0.4"
tokio = { version = "1.2.0", features = ["sync", "macros", "rt-multi-thread"] }
log = "0.4.14"
thiserror = "1.0.26"
blake3 = "1.3.1"

[dev-dependencies]
tempfile = "3.1.0"
cargo_toml = "0.11.0"
