[package]
edition = "2021"
name = "crate_db"
version = "0.4.15"
authors = ["Kornel <kornel@geekhood.net>"]
description = "Internal index of crates used by crates.rs"

[lib]
name ="crate_db"
path = "src/lib_crate_db.rs"

[dependencies]
rusqlite = "0.28.0"
rich_crate = { path = "../rich_crate" }
categories = { path = "../categories" }
lazy_static = "1.4.0"
chrono = { version = "0.4.22", default-features = false }
thread_local = "1.1.4"
parking_lot = "0.12.1"
rmp-serde = "1.1.0"
semver = "1.0.14"
tokio = { version = "1.21.1", features = ["sync", "macros", "rt-multi-thread"] }
log = "0.4.17"
thiserror = "1.0.35"
blake3 = "1.3.1"
once_cell = { version = "1.15.0", features = ["parking_lot"] }
smartstring = "1.0.1"

[dev-dependencies]
tempfile = "3.3.0"
cargo_toml = "0.12.1"
