[package]
edition = "2018"
name = "crate_files"
version = "0.2.3"
authors = ["Kornel <kornel@geekhood.net>"]

[dependencies]
tar = "0.4.15"
libflate = "0.1.14"
cargo_toml = "0.6.4"
render_readme = { git = "https://gitlab.com/crates.rs/render_readme.git" }
repo_url = { git = "https://gitlab.com/crates.rs/repo_url.git" }
udedokei = { path = "../udedokei" }
quick-error = "1.2.2"
