[package]
edition = "2018"
description = "Analyze git repository containing Cargo crates"
name = "crate_git_checkout"
version = "0.4.7"
authors = ["Kornel <kornel@geekhood.net>"]

[lib]
name = "crate_git_checkout"
path = "src/crate_git_checkout.rs"

[dependencies]
git2 = "0.13"
cargo_toml = "0.9.1"
render_readme = { path = "../render_readme" }
repo_url = { path = "../repo_url" }
failure = "0.1.8"
urlencoding = "1.3.3"
lazy_static = "1.4.0"
