[package]
edition = "2018"
description = "Analyze git repository containing Cargo crates"
name = "crate_git_checkout"
version = "0.4.7"
authors = ["Kornel <kornel@geekhood.net>"]

[lib]
name = "crate_git_checkout"
path = "src/crate_git_checkout.rs"

[dependencies]
git2 = "0.15.0"
cargo_toml = "0.12.1"
render_readme = { path = "../render_readme" }
repo_url = { path = "../repo_url" }
urlencoding = "2.1.2"
lazy_static = "1.4.0"
thiserror = "1.0.35"
