[package]
version = "0.8.4"
edition = "2018"
name = "crates_io_client"
authors = ["Kornel <kornel@geekhood.net>"]
description = "Unofficial, minimal client that gets data from crates.io internal JS API"

[lib]
name = "crates_io_client"
path = "src/lib_crates_io_client.rs"

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
simple_cache = { path = "../simple_cache", version = "0.7.0" }
rand = "0.7.2"
semver = "0.9.0"
parking_lot = "0.10.0"
urlencoding = "1.0.0"
tokio = { version = "0.2", features = ["macros", "sync"] }
futures = "0.3.4"
chrono = "0.4.10"
