[package]
version = "0.8.7"
edition = "2021"
name = "crates_io_client"
authors = ["Kornel <kornel@geekhood.net>"]
description = "Unofficial, minimal client that gets data from crates.io internal JS API"

[lib]
name = "crates_io_client"
path = "src/lib_crates_io_client.rs"

[dependencies]
serde = "1.0.145"
serde_derive = "1.0.145"
simple_cache = { path = "../simple_cache", version = "0.7.0" }
parking_lot = "0.12.0"
urlencoding = "2.0.0"
tokio = { version = "1.2.0", features = ["macros", "sync"] }
futures = "0.3.4"
rand = "0.8"
semver = "1.0.4"
chrono = { version = "0.4.22", default-features = false, features = ["serde"] }
fetcher = { path = "../fetcher/" }
log = "0.4.17"
ahash = "0.8.0"
smartstring = { version = "1.0.1", features = ["serde"] }
