[package]
name = "creviews"
version = "0.1.3"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2018"

[dependencies]
crev-lib = { git = "https://github.com/crev-dev/cargo-crev", rev = "96e9065c94911c89b770f7f46753193f733ea1ab" }
crev-data = { git = "https://github.com/crev-dev/cargo-crev", rev = "96e9065c94911c89b770f7f46753193f733ea1ab" }
crev-wot = { git = "https://github.com/crev-dev/cargo-crev", rev = "96e9065c94911c89b770f7f46753193f733ea1ab" }
failure = "0.1.8"
