[package]
name = "datadump"
version = "0.1.3"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2021"

[dependencies]
csv = "1.1.6"
tar = "0.4.38"
libflate = "1.2.0"
serde = { version = "1.0.145", features = ["derive"] }
chrono = { version = "0.4.22", default-features = false, features = ["serde"] }
kitchen_sink = { path = "../kitchen_sink", version = "0.9" }
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.0", features = ["blocking"] }
rayon = "1.3.1"
env_logger = "0.9.0"
hex = { version = "0.4.3", features = ["serde"] }
ahash = "0.8.0"
smartstring = { version = "1.0.1", features = ["serde"] }
