[package]
name = "debcargo_list"
version = "0.1.0"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.0"
git2 = "0.15.0"
quick-error = "2.0.0"
smartstring = "1.0.1"
