[package]
name = "deps_index"
version = "0.1.4"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2018"

[dependencies]
crates-index = "0.15.2"
rich_crate = { path = "../rich_crate", version = "0.5" }
repo_url = { path = "../repo_url", version = "0.3.0" }
feat_extractor = { path = "../feat_extractor" }
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
toml = "0.5.5"
lazy_static = "1.4.0"
regex = "1.3.1"
url = "2.1.0"
failure = "0.1.6"
tokio = { version = "0.2", features = ["rt-threaded", "macros", "time", "sync", "blocking"] }
rayon = "1.3.0"
reqwest = "0.10"
semver-parser = "0.9.0"
semver = { version = "0.10.0", features = ["serde"] }
string-interner = "0.12.0"
parking_lot = "0.11.0"
ahash = "0.4.4"
futures = "0.3.5"
double-checked-cell-async = "2.0.2"
triomphe = "0.1.1"
smol_str = "=0.1.16" # https://github.com/rust-analyzer/smol_str/issues/27

