[package]
edition = "2021"
name = "docs_rs_client"
version = "0.4.2"
authors = ["Kornel <kornel@geekhood.net>"]

[lib]
name = "docs_rs_client"
path = "src/lib_docs_rs_client.rs"

[dependencies]
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
simple_cache = { path = "../simple_cache", version = "0.7.0" }
tokio = { version = "1.2.0", features = ["macros"] }
fetcher = { path = "../fetcher/" }
