[package]
name = "event_log"
version = "0.1.0"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2018"

[dependencies]
log = "0.4.14"
rmp-serde = "0.15.5"
serde = "1.0.127"
serde_json = "1.0.66"
sled = "0.34.6"
thiserror = "1.0.26"
tokio = { version = "1.9.0", features = ["macros","rt-multi-thread"] }
