[package]
name = "event_log"
version = "0.1.0"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2018"

[dependencies]
log = "0.4.14"
rmp-serde = "0.15.5"
rusqlite = "0.25.3"
serde = "1.0.127"
serde_json = "1.0.66"
thiserror = "1.0.26"
tokio = { version = "1.9.0", features = ["macros","time", "rt-multi-thread"] }
thread_local = "1.0.1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
