[package]
name = "feat_extractor"
version = "0.1.1"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2018"

[dependencies]
rake = { git = "https://github.com/kornelski/rake-rs", rev = "542367497622bf23103f6458352636c63c55a5d0" }
rich_crate = { path = "../rich_crate" }
lazy_static = "1.4.0"
semver = "0.9.0"
