[package]
name = "feat_extractor"
version = "0.1.3"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2021"

[dependencies]
rake = { git = "https://github.com/kornelski/rake-rs", rev = "542367497622bf23103f6458352636c63c55a5d0" }
rich_crate = { path = "../rich_crate" }
lazy_static = "1.4.0"
semver = "1.0.14"
regex = "1.6.0"
blake3 = "1.3.1"
log = "0.4.17"
ahash = "0.8.0"
