[package]
edition = "2018"
name = "front_end"
version = "0.3.6"
authors = ["Kornel <kornel@geekhood.net>"]
autobins = true

[lib]
name = "front_end"
path = "src/front_end.rs"

[build-dependencies]
ructe = "0.8.0"

[dependencies]
kitchen_sink = { path = "../kitchen_sink", version = "0.8" }
rich_crate = { path = "../rich_crate" }
render_readme = { git = "https://gitlab.com/crates.rs/render_readme.git", version = "0.6.0" }
categories = { path = "../categories" }
udedokei = { path = "../udedokei" }
search_index = { path = "../search_index" }
rayon = "1.3.0"
failure = "0.1.6"
chrono = "0.4.10"
semver = "0.9.0"
semver-parser = "0.9.0"
lab = "0.7.2"
urlencoding = "1.0.0"
regex = "1.3.1"
locale = "0.2.2"
url = "2.1.0"
parking_lot = "0.10.0"
unicase = "2.6.0"
either = "1.5.3"
heck = "0.3.1"
