[package]
edition = "2021"
name = "front_end"
version = "0.4.6"
authors = ["Kornel <kornel@geekhood.net>"]
autobins = true

[lib]
name = "front_end"
path = "src/front_end.rs"
doctest = false # ructe templates emit broken doctest

[build-dependencies]
ructe = "0.13"

[dependencies]
kitchen_sink = { path = "../kitchen_sink", version = "0.9" }
rich_crate = { path = "../rich_crate" }
render_readme = { path = "../render_readme", version = "0.7.0" }
categories = { path = "../categories" }
udedokei = { path = "../udedokei" }
search_index = { path = "../search_index" }
chrono = { version = "0.4.22", default-features = false }
semver = "1.0.4"
lab = "0.11.0"
urlencoding = "2.1.2"
regex = "1.6.0"
locale = "0.2.2"
url = "2.1.0"
parking_lot = "0.12.0"
unicase = "2.6.0"
either = "1.5.3"
heck = "0.4.0"
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.4"
chrono-humanize = "0.2.1"
log = "0.4.11"
anyhow = "1.0.41"
peeking_take_while = "1.0.0"
rand = "0.8.4"
treemap = { git = "https://github.com/kornelski/treemap-rs", rev = "4a0beac18a61780b5f9e5910851c7b94c45be8b3" }
textwrap = "0.15.1"
validator = { version = "0.1.0", path = "../validator" }
blake3 = "1.3.1"
