[package]
edition = "2018"
name = "github_info"
version = "0.8.0"
authors = ["Kornel <kornel@geekhood.net>"]

[lib]
name = "github_info"
path = "src/lib_github.rs"

[dependencies]
repo_url = { git = "https://gitlab.com/crates.rs/repo_url.git" }
simple_cache = { git = "https://gitlab.com/crates.rs/simple_cache.git", version = "0.7.0" }
serde = "1.0.53"
serde_derive = "1.0.53"
serde_json = "1.0.17"
file = "1.1.2"
urlencoding = "1.0.0"
quick-error = "1.2.2"
hyper = "0.12.0"
