[package]
edition = "2018"
name = "github_info"
version = "0.9.3"
authors = ["Kornel <kornel@geekhood.net>"]

[lib]
name = "github_info"
path = "src/lib_github.rs"

[dependencies]
repo_url = { path = "../repo_url" }
github_v3 = { path = "../github_v3" }
simple_cache = { path = "../simple_cache", version = "0.7.0" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
urlencoding = "1.0.0"
quick-error = "1.2.2"

[dev-dependencies]
tokio = { version = "0.2.12", features = ["macros", "rt-threaded"] }
