[package]
edition = "2018"
name = "github_info"
version = "0.9.3"
authors = ["Kornel <kornel@geekhood.net>"]

[lib]
name = "github_info"
path = "src/lib_github.rs"

[dependencies]
repo_url = { path = "../repo_url" }
github_v3 = { path = "../github_v3" }
simple_cache = { path = "../simple_cache", version = "0.7.0" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
urlencoding = "2.0.0"
quick-error = "2"
tokio = { version = "1.11.0", default-features = false, features = ["rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
