[package]
name = "github_v3"
description = "Async GitHub API v3 client"
version = "1.0.2"
authors = ["Kornel <kornel@geekhood.net>"]
keywords = ["github", "restful", "api", "async"]
categories = ["web-programming", "web-programming::http-client"]
edition = "2018"
readme = "README.md"
repository = "https://gitlab.com/crates.rs/crates.rs/-/tree/HEAD/github_v3"
homepage = "https://lib.rs/github_v3"
license = "CC0-1.0"

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
serde = "1.0.135"
serde_json = "1.0.78"
thiserror = "1.0.30"
serde_derive = "1.0.135"
futures = "0.3.19"
async-stream = "0.3.2"
tokio = { version = "1.15.0", features = ["time"] }
urlencoding = "2.1.0"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros", "time"] }

[features]
default = ["gzip"]
gzip = ["reqwest/gzip"]

[badges]
maintenance = { status = "passively-maintained" }
