[package]
edition = "2018"
name = "kitchen_sink"
version = "0.9.2"
authors = ["Kornel <kornel@geekhood.net>"]
publish = false

[lib]
name = "kitchen_sink"
path = "src/lib_kitchen_sink.rs"

[dependencies]
crates_io_client = { path = "../crates_io_client" }
deps_index = { path = "../deps_index" }
feat_extractor = { path = "../feat_extractor" }
docs_rs_client = { path = "../docs_rs_client", version = "0.4.0" }
github_info = { path = "../github_info", version = "0.9" }
crate_git_checkout = { path = "../crate_git_checkout", version = "0.4.5" }
user_db = { path = "../user_db", version = "0.3" }
crate_db = { path = "../crate_db", version = "0.4.0" }
categories = { path = "../categories" }
render_readme = { path = "../render_readme" }
rich_crate = { path = "../rich_crate", version = "0.5.1" }
simple_cache = { path = "../simple_cache", version = "0.7.0" }
repo_url = { path = "../repo_url", version = "0.3.0" }
cargo_toml = "0.8.0"
serde = "1.0.107"
serde_derive = "1.0.107"
serde_json = "1.0.52"
toml = "0.5.6"
lazy_static = "1.4.0"
regex = "1.3.7"
url = "2.1.1"
failure = "0.1.8"
tokio = { version = "0.2.20", features = ["rt-threaded", "macros", "time", "sync", "blocking"] }
itertools = "0.9.0"
rayon = "1.3.0"
reqwest = "0.10.4"
semver-parser = "0.9.0"
chrono = "0.4.11"
semver = { version = "0.9.0", features = ["serde"] }
ctrlc = "3.1.4"
flate2 = "1.0.14"
string-interner = "0.7.1"
parking_lot = "0.10.2"
udedokei = { path = "../udedokei" }
tar = "0.4.26"
libflate = "1.0.0"
ahash = "0.3.4"
deunicode = "1.1.1"
futures = "0.3.5"
double-checked-cell-async = "2.0.2"

