[package]
edition = "2018"
name = "kitchen_sink"
version = "0.9.9"
authors = ["Kornel <kornel@geekhood.net>"]
publish = false

[lib]
name = "kitchen_sink"
path = "src/lib_kitchen_sink.rs"

[dependencies]
crates_io_client = { path = "../crates_io_client" }
creviews = { path = "../creviews" }
deps_index = { path = "../deps_index" }
feat_extractor = { path = "../feat_extractor" }
docs_rs_client = { path = "../docs_rs_client", version = "0.4.2" }
github_info = { path = "../github_info", version = "0.9.3" }
crate_git_checkout = { path = "../crate_git_checkout", version = "0.4.7" }
user_db = { path = "../user_db", version = "0.3" }
tarball = { path = "../tarball" }
cargo_toml = "0.9.1"

crate_db = { path = "../crate_db", version = "0.4.0" }
categories = { path = "../categories" }
render_readme = { path = "../render_readme" }
rich_crate = { path = "../rich_crate", version = "0.5.1" }
simple_cache = { path = "../simple_cache", version = "0.7.8" }
repo_url = { path = "../repo_url", version = "0.3.3" }
serde = "1.0.107"
serde_derive = "1.0.107"
serde_json = "1.0.52"
toml = "0.5.6"
lazy_static = "1.4.0"
regex = "1.3.7"
url = "2.1.1"
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
itertools = "0.10"
rayon = "1.3.0"
reqwest = "0.11.0"
semver-parser = "0.9.0"
chrono = "0.4.11"
semver = { version = "0.10.0", features = ["serde"] }
ctrlc = "3.1.4"
flate2 = "1.0.14"
string-interner = "0.12"
parking_lot = "0.11"
ahash = "0.7.4"
deunicode = "1.1.1"
futures = "0.3.5"
double-checked-cell-async = "2.0.2"
triomphe = "0.1.1"
env_logger = "0.8"
log = "0.4.11"
smol_str = "0.1.16"
fetcher = { path = "../fetcher/" }
once_cell = "1.7.2"
anyhow = "1.0.41"
thiserror = "1.0.26"
serde-big-array = { version = "0.3.2", features = ["const-generics"] }
