[package]
edition = "2021"
name = "kitchen_sink"
version = "0.9.12"
authors = ["Kornel <kornel@geekhood.net>"]
publish = false

[lib]
name = "kitchen_sink"
path = "src/lib_kitchen_sink.rs"

[dependencies]
crates_io_client = { path = "../crates_io_client" }
creviews = { path = "../creviews" }
deps_index = { path = "../deps_index" }
event_log = { path = "../event_log" }
feat_extractor = { path = "../feat_extractor" }
docs_rs_client = { path = "../docs_rs_client", version = "0.4.2" }
github_info = { path = "../github_info", version = "0.9.3" }
crate_git_checkout = { path = "../crate_git_checkout", version = "0.4.7" }
user_db = { path = "../user_db", version = "0.3" }
tarball = { path = "../tarball" }
cargo_toml = "0.13.0-alpha.0"

crate_db = { path = "../crate_db", version = "0.4.0" }
categories = { path = "../categories" }
render_readme = { path = "../render_readme", version = "0.8" }
rich_crate = { path = "../rich_crate", version = "0.5.1" }
simple_cache = { path = "../simple_cache", version = "0.7.8" }
repo_url = { path = "../repo_url", version = "0.3.3" }
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
toml = "0.5.9"
lazy_static = "1.4.0"
regex = "1.3.7"
url = "2.1.1"
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
itertools = "0.10"
rayon = "1.3.0"
reqwest = "0.11.0"
chrono = { version = "0.4.22", default-features = false }
semver = { version = "1.0.4", features = ["serde"] }
ctrlc = "3.1.4"
flate2 = "1.0.14"
string-interner = "0.13.0"
parking_lot = "0.12.0"
ahash = "0.8.0"
deunicode = "1.1.1"
futures = "0.3.5"
double-checked-cell-async = "2.0.2"
triomphe = "0.1.8"
env_logger = "0.10.0"
log = "0.4.17"
fetcher = { path = "../fetcher/" }
once_cell = "1.15.0"
anyhow = "1.0.65"
thiserror = "1.0.35"
serde-big-array = "0.4.1"
hex = "0.4.3"
urlencoding = "2.1.2"
smartstring = "1.0.1"
