[package]
name = "ranking"
version = "0.1.4"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2018"

[lib]
name = "ranking"
path = "src/lib_ranking.rs"

[dependencies]
rich_crate = { path = "../rich_crate" }
chrono = "0.4.10"
cargo_toml = "0.9.1"
render_readme = { path = "../render_readme", version = "0.7" }
semver = "0.10.0"
