[package]
name = "ranking"
version = "0.1.4"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2018"
publish = false

[lib]
name = "ranking"
path = "src/lib_ranking.rs"

[dependencies]
rich_crate = { path = "../rich_crate" }
chrono = { version = "0.4.22", default-features = false }
cargo_toml = "0.12.1"
render_readme = { path = "../render_readme", version = "0.7" }
semver = "1.0.14"
