[package]
version = "0.3.4"
edition = "2018"
name = "reindex"
authors = ["Kornel <kornel@geekhood.net>"]

[dependencies]
crate_db = { path = "../crate_db", version = "0.4.0" }
github_info = { path = "../github_info", version = "0.9" }
kitchen_sink = { path = "../kitchen_sink", version = "0.9" }
repo_url = { path = "../repo_url" }
user_db = { path = "../user_db", version = "0.3" }
failure = "0.1.6"
rand = "0.7.2"
search_index = { path = "../search_index" }
render_readme = { path = "../render_readme" }
ranking = { path = "../ranking" }
either = "1.5.3"
parking_lot = "0.10.0"
udedokei = { path = "../udedokei" }
tokio = { version = "0.2.11", features = ["rt-threaded", "macros", "sync", "blocking"] }
futures = "0.3.4"
triomphe = "0.1.1"
