[package]
version = "0.3.9"
edition = "2018"
name = "reindex"
authors = ["Kornel <kornel@geekhood.net>"]

[dependencies]
crate_db = { path = "../crate_db", version = "0.4.0" }
github_info = { path = "../github_info", version = "0.9" }
kitchen_sink = { path = "../kitchen_sink", version = "0.9" }
repo_url = { path = "../repo_url" }
user_db = { path = "../user_db", version = "0.3" }
failure = "0.1.6"
rand = "0.8"
search_index = { path = "../search_index" }
render_readme = { path = "../render_readme" }
feat_extractor = { path = "../feat_extractor" }
ranking = { path = "../ranking" }
parking_lot = "0.11"
udedokei = { path = "../udedokei" }
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3.4"
triomphe = "0.1.1"
simple_cache = { path = "../simple_cache", version = "0.7.0" }
debcargo_list = { path = "../debcargo_list" }
blake3 = "0.3.4"
log = "0.4.14"

[dev-dependencies]
ahash = "0.7.4"
