[package]
edition = "2021"
name = "rich_crate"
version = "0.5.4"
authors = ["Kornel <kornel@geekhood.net>"]
description = "Crate struct enriched with additional crates.rs metadata"
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
crates_io_client = { path = "../crates_io_client", version = "0.8.2" }
render_readme = { path = "../render_readme", version = "0.7" }
udedokei = { path = "../udedokei" }
cargo_author = "1.0.6"
cargo_toml = "0.12.1"
repo_url = { path = "../repo_url" }
semver = "1.0.14"
parse_cfg = "2.0.0"
serde_derive = "1.0.145"
serde = "1.0.145"
log = "0.4.17"
ahash = "0.8.0"
hex = "0.4.3"
smartstring = "1.0.1"
chrono = { version = "0.4.22", default-features = false }
