[package]
version = "0.3.3"
edition = "2018"
name = "search_index"
authors = ["Kornel <kornel@geekhood.net>"]

[lib]
name = "search_index"
path = "src/lib_search_index.rs"

[dependencies]
tantivy = { git = "https://github.com/tantivy-search/tantivy" }
rich_crate = { path = "../rich_crate" }
rayon = "1.3.0"
rand = "0.7.2"
