[package]
version = "0.3.7"
edition = "2021"
name = "search_index"
authors = ["Kornel <kornel@geekhood.net>"]
publish = false

[lib]
name = "search_index"
path = "src/lib_search_index.rs"

[dependencies]
tantivy = "0.18.0"
rich_crate = { path = "../rich_crate" }
rayon = "1.5.0"
rand = "0.8"
itertools = "0.10.5"
categories = { path = "../categories" }
