[package]
name = "crates-server"
version = "1.7.0"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2018"
description = "Crates.rs web server"
readme = "README.md"
publish = false

[package.metadata.deb]
assets = [
    ["target/release/crates-server", "usr/bin/", "755"],
    ["target/release/reindex_crates", "usr/bin/", "755"],
    ["target/release/reindex_users", "usr/bin/", "755"],
    ["target/release/datadump", "usr/bin/", "755"],
    ["target/release/builder", "usr/bin/", "755"],
    ["target/release/compat_export", "usr/bin/", "755"],
    ["../data/page/*", "/var/lib/crates-server/page/", "644"],
    ["../data/git_crates.txt", "/var/lib/crates-server/", "644"],
    ["../data/category_overrides.txt", "/var/lib/crates-server/", "644"],
    ["../style/public/index.css", "/var/www/lib.rs/public/", "644"],
    ["../style/public/fira/*", "/var/www/lib.rs/public/fira/", "644"],
    ["../front_end/public/robots.txt", "/var/www/lib.rs/public/", "644"],
    ["../front_end/public/*.png", "/var/www/lib.rs/public/", "644"],
    ["../front_end/public/*.svg", "/var/www/lib.rs/public/", "644"],
    ["../front_end/public/opensearch.xml", "/var/www/lib.rs/public/", "644"],
]

[dependencies]
actix-web = "=4.0.0-beta.5"
actix-service = "=2.0.0-beta.5" # hack for actix-files
env_logger = "0.8.3"
log = "0.4.14"
render_readme = { path = "../render_readme", version = "0.7" }
search_index = { path = "../search_index" }
repo_url = { path = "../repo_url" }
kitchen_sink = { path = "../kitchen_sink", version = "0.9" }
front_end = { path = "../front_end", version = "0.4" }
urlencoding = "1.3.3"
failure = "0.1.8"
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros", "time"] }
categories = { path = "../categories" }
arc-swap = "1.2.0"
signal-hook = "0.3.6"
locale = "0.2.2"
cap = "0.1.0"
futures = "0.3.13"
actix-files = "0.6.0-beta.2"
actix-threadpool = "0.3.3"
either = "1.6.1"
qstring = "0.7.2"
chrono = "0.4.19"
blake3 = { version = "0.3.7", default-features = false }
base64 = "0.13.0"
html-minifier = "3.0.8"
